--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,31 +12,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".LeagueTableActivity"
+        <activity android:name=".BetActivity"></activity>
+        <activity
+            android:name=".LeagueTableActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity android:name=".CalendarActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".CalendarActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity android:name=".TopScorersActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".TopScorersActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
